extends Control

@onready var new_button : Node = $VBoxContainer/HBoxContainer/NewButton
@onready var sale_button : Node = $VBoxContainer/HBoxContainer/SaleButton
@onready var battle_pass_button : Node = $VBoxContainer/HBoxContainer2/BattlePassButton
@onready var search_button : Node = $VBoxContainer/HBoxContainer2/SearchButton


func _on_new_button_pressed() -> void:
	pass # Replace with function body.


func _on_sale_button_pressed() -> void:
	pass # Replace with function body.


func _on_battle_pass_button_pressed() -> void:
	pass # Replace with function body.


func _on_search_button_pressed() -> void:
	pass # Replace with function body.
